--- a/arch/arm64/configs/m2note_defconfig
+++ b/arch/arm64/configs/m2note_defconfig
@@ -1538,7 +1538,7 @@ CONFIG_MTK_CACHE_DUMP=y
 # CONFIG_MTK_MT6750TT is not set
 # CONFIG_MTK_AB_OTA_UPDATER is not set
 CONFIG_MTK_GROUP_ENABLE_VERITY=y
-CONFIG_SYSTEM_AS_ROOT=y
+# CONFIG_SYSTEM_AS_ROOT is not set
 CONFIG_MTK_OTA_DEVICE=y
 CONFIG_MTK_AEE_FEATURE=y
 CONFIG_MTK_AEE_AED=y
@@ -1625,7 +1625,7 @@ CONFIG_MTK_SYSENV=y
 # CONFIG_HAVE_MTK_IN_HOUSE_TEE_SUPPORT is not set
 # CONFIG_MTK_WATCHPOINT is not set
 # CONFIG_RT_REGMAP is not set
-# CONFIG_MTK_DM_VERITY_OFF is not set
+CONFIG_MTK_DM_VERITY_OFF=y
 
 #
 # SCSI device support
