--- a/arch/arm64/configs/m2note_defconfig
+++ b/arch/arm64/configs/m2note_defconfig
@@ -1278,34 +1278,34 @@ CONFIG_MTK_PQ_COLOR_MODE="DISP"
 CONFIG_MTK_SENSOR_SUPPORT=y
 CONFIG_MTK_SENSORS_1_0=y
 # CONFIG_MTK_AUTO_DETECT_ACCELEROMETER is not set
-CONFIG_CUSTOM_KERNEL_ACCELEROMETER=y
+# CONFIG_CUSTOM_KERNEL_ACCELEROMETER is not set
 # CONFIG_MTK_ACCELHUB is not set
 # CONFIG_MTK_BMI160_SPI is not set
-CONFIG_MTK_MC3410_I2C=y
+# CONFIG_MTK_MC3410_I2C is not set
 # CONFIG_MTK_MPU6515A is not set
 # CONFIG_MTK_BMA222E is not set
 # CONFIG_MTK_MPU6050G is not set
 # CONFIG_MTK_STK8BAXX is not set
-CONFIG_CUSTOM_KERNEL_ALSPS=y
+# CONFIG_CUSTOM_KERNEL_ALSPS is not set
 # CONFIG_MTK_AUTO_DETECT_ALSPS is not set
 # CONFIG_MTK_CM36558 is not set
 # CONFIG_MTK_ALSPSHUB is not set
-CONFIG_MTK_CM36652=y
+# CONFIG_MTK_CM36652 is not set
 # CONFIG_MTK_CM36686 is not set
 # CONFIG_MTK_EPL2182 is not set
 # CONFIG_MTK_APDS9930 is not set
 # CONFIG_MTK_LTR559 is not set
 # CONFIG_MTK_STK3X1X_OT is not set
-CONFIG_CUSTOM_KERNEL_GYROSCOPE=y
+# CONFIG_CUSTOM_KERNEL_GYROSCOPE is not set
 # CONFIG_MTK_GYROHUB is not set
 # CONFIG_MTK_BMI160GY_SPI is not set
-CONFIG_MTK_ITG1010=y
+# CONFIG_MTK_ITG1010 is not set
 # CONFIG_MTK_MPU6515G is not set
 # CONFIG_MTK_MPU6050GY is not set
 # CONFIG_MTK_AUTO_DETECT_MAGNETOMETER is not set
-CONFIG_CUSTOM_KERNEL_MAGNETOMETER=y
+# CONFIG_CUSTOM_KERNEL_MAGNETOMETER is not set
 # CONFIG_MTK_MAGHUB is not set
-CONFIG_MTK_AKM09911=y
+# CONFIG_MTK_AKM09911 is not set
 # CONFIG_MTK_AKM8963 is not set
 CONFIG_MTK_HWMON=y
 # CONFIG_CUSTOM_KERNEL_BAROMETER is not set
