--- a/arch/arm64/configs/m2note_defconfig
+++ b/arch/arm64/configs/m2note_defconfig
@@ -1136,7 +1136,7 @@ CONFIG_ARCH_MTK_PROJECT="m2note"
 # CONFIG_FPGA_EARLY_PORTING is not set
 # CONFIG_MTK_LM_MODE is not set
 # CONFIG_MT_ENG_BUILD is not set
-CONFIG_MTK_DTBO_FEATURE=y
+# CONFIG_MTK_DTBO_FEATURE is not set
 # CONFIG_MTK_LATE_MOUNT is not set
 # CONFIG_TARGET_COPY_OUT_ODM is not set
 # CONFIG_MTK_LDVT is not set
