--- a/drivers/misc/mediatek/lcm/nt35532_fhd_dsi_vdo_sharp/Makefile
+++ b/drivers/misc/mediatek/lcm/nt35532_fhd_dsi_vdo_sharp/Makefile
@@ -2,8 +2,10 @@
 # Makefile for misc devices that really don't fit anywhere else.
 #
 
-obj-y += nt35532_fhd_dsi_vdo_sharp.o
+ccflags-y += -w
 
+obj-y += nt35532_fhd_dsi_vdo_sharp.o
+ccflags-$(CONFIG_MTK_LCM) += -I$(srctree)/drivers/misc/mediatek/lcm/inc
 
 
 
