For now try to fix touch (Needs other fixes)

--- a/arch/arm64/configs/m2note_defconfig
+++ b/arch/arm64/configs/m2note_defconfig
@@ -1892,7 +1892,10 @@ CONFIG_TOUCHSCREEN_MTK=y
 # CONFIG_TOUCHSCREEN_MTK_GT1151TB is not set
 # CONFIG_TOUCHSCREEN_MTK_GT928 is not set
 # CONFIG_TOUCHSCREEN_MTK_GT9XXTB_HN_NEW is not set
-# CONFIG_TOUCHSCREEN_MTK_GT9XX_HOTKNOT is not set
+CONFIG_TOUCHSCREEN_MTK_GT9XX_HOTKNOT=y
+CONFIG_GT9XX_FIRMWARE="firmware_default"
+CONFIG_GT9XX_CONFIG="config_default"
+CONFIG_GTP_COMPATIBLE_MODE=y
 # CONFIG_TOUCHSCREEN_MTK_GT9XX_HOTKNOT_PHONE is not set
 # CONFIG_TOUCHSCREEN_MTK_SYNAPTICS_I2C_RMI4 is not set
 # CONFIG_TOUCHSCREEN_MTK_GT910 is not set
