--- a/drivers/input/touchscreen/mediatek/GT9XX_hotknot/Makefile
+++ b/drivers/input/touchscreen/mediatek/GT9XX_hotknot/Makefile
@@ -5,6 +5,8 @@ ccflags-y += -I$(srctree)/drivers/input/touchscreen/mediatek/GT9XX_hotknot/inclu
 ccflags-y += -I$(srctree)/drivers/misc/mediatek/include/mt-plat/
 ccflags-y += -I$(srctree)/drivers/misc/mediatek/include/mt-plat/$(MTK_PLATFORM)/include/
 
+ccflags-y += -w
+
 obj-y	+=  gt9xx_driver.o
 obj-y	+=  goodix_tool.o
 obj-y	+=  gt9xx_update.o
